# ner-system

./: .gitignore  LICENSE.md  README.md  pyproject.toml
ner_system/: api_init.py  config.py  data_models.py  main.py  utils.py
ner_system/api/: ner.py  sample_request.json  sample_response.json
ner_system/model/: __init__.py  pipeline.py
notebooks/: BERT+CRF_Model.ipynb  R&D_BERT+CRF_Model.ipynb  R&D_CRF_Model.ipynb
tests/: test_api.py  test_pipeline.py  test_request.py
